
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-05-03 niel
	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
	Fix: Reinstate the LINES TERMINATED BY clause to loading data files to override default
	behaviour of only using '\n' instead of '\r\n' that we need (Closes Issue 2104).
2016-05-02 bart39
	Mrg: PR 2127, from rainje - New release name format not matched with reqid
	Chg: update schema and replace triggers for above PR.
2016-04-28 niel
	Fix: Code style foramtting.
	Fix: Removing pre-install-cmd from composer.json again. It kills the install for new users.
		User on dev branch will have to manually issue the 'git pull' command until I can find a
		work-around for this.
	Fix: Removing post-install-cmd from composer.json It doesn't work if nZEDb's configuration
		file has not been created, which is always the case on new installs.
	Fix: Restore the original method of doing git pull before composer install and update db after.
2016-04-28 DariusIII
	Add: 'gn' case to nfo retrieval in api, to be in line with newznab api spec.
2016-04-27 niel
	Add: Adding new nodes to nzedb.xml. This last script node will hold the date and ordinal of any
		script run as part of updating.
		 This will allow us to specify scripts that the updating process can run to make changes
		other than simple file changes. It is intended that the scripts will *not* be included in
		the repo, but instead be fetched from github.
	Fix: Update Scrutinizer file to hopefully fix 'failed install' errors.
	Fix: PR 2120, from megonomic - Check for SD movies before HD ones, to prevent some being falsey
		matched.
2016-04-26 bart39
	Fix: Update sphinx releases_rt index when release files are added.