@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-05-05 bart39
+	Fix: Missing escape on release triggers.
 2016-05-03 niel
 	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
 	Fix: Reinstate the LINES TERMINATED BY clause to loading data files to override default
